# aditya

./: .env  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
backend/: data_read_write.py  google_sheet.json  log_utils.py
frontend/: app.py
frontend/pages/: 1_Login.py
