[project]
name = "aditya"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "colorlog>=6.10.1",
    "python-dotenv>=1.2.1",
    "streamlit>=1.53.1",
    "gspread>=6.2.1",
    "gspread-dataframe>=4.0.0",
    "oauth2client>=4.1.3",
]
